Добавила шрифты и основные блоки для стилизации

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,14 @@
-body {
-  color: rgb(156, 9, 107);
-}
+@import "global/global.less";
+@import "global/fonts.less";
+@import "global/variables.less";
+@import "global/mixins.less";
+@import "blocks/advantages.less";
+@import "blocks/footer.less";
+@import "blocks/hotel-search.less";
+@import "blocks/main.less";
+@import "blocks/navigation.less";
+@import "blocks/page.less";
+@import "blocks/photos.less";
+@import "blocks/review.less";
+@import "blocks/services.less";
+@import "blocks/video-presentation.less";
