Добавила основные стили текстовым элементам

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,3 +1,20 @@
 .advantages {
   outline: 1px solid crimson;
 }
+
+.advantages__title {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
+}
+
+.advantages__number,
+.advantages__description {
+  font-size: 14px;
+  line-height: 21px;
+  color: @dark-grey;
+}
