--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,3 +1,16 @@
 .footer {
   outline: 1px solid crimson;
 }
+
+.footer__tag {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer__copyright {
+  font-size: 14px;
+  line-height: 26px;
+}
