--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -1,3 +1,19 @@
 .hotel-search {
   outline: 1px solid crimson;
 }
+
+.hotel-search__question {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
+}
+
+.hotel-search__text {
+  font-size: 14px;
+  line-height: 24px;
+  color: @dark-grey;
+}
