--- a/source/less/blocks/services.less
+++ b/source/less/blocks/services.less
@@ -1,3 +1,19 @@
 .services {
   outline: 1px solid crimson;
 }
+
+.services__title {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
+}
+
+.services__description {
+  font-size: 14px;
+  line-height: 21px;
+  color: @dark-grey;
+}
