--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,3 +1,21 @@
 .photos {
   outline: 1px solid crimson;
 }
+
+.photos__title {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.photos__author {
+  font-size: 14px;
+  line-height: 24px;
+  color: @dark-grey;
+}
+
+.photos__likes-number {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+}
