--- a/source/less/blocks/video-presentation.less
+++ b/source/less/blocks/video-presentation.less
@@ -1,3 +1,19 @@
 .video-presentation {
   outline: 1px solid crimson;
 }
+
+.video-presentation__doubts {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
+}
+
+.video-presentation__watch {
+  font-weight: 14px;
+  line-height: 24px;
+  color: @dark-grey;
+}
