--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,10 +3,12 @@
 @import "global/variables.less";
 @import "global/mixins.less";
 @import "blocks/advantages.less";
+@import "blocks/button.less";
 @import "blocks/footer.less";
+@import "blocks/page-header.less";
 @import "blocks/hotel-search.less";
-@import "blocks/main.less";
-@import "blocks/navigation.less";
+@import "blocks/page-main.less";
+@import "blocks/main-nav.less";
 @import "blocks/page.less";
 @import "blocks/photos.less";
 @import "blocks/review.less";
