--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -10,11 +10,12 @@
 
 .page__body {
   min-width: 320px;
+  max-width: 1200px;
+  margin: 0 auto;
   min-height: 100%;
   display: grid;
   grid-template-rows: 1fr min-content;
   align-content: start;
-  margin: 0;
   background-color: @white;
   color: @black;
 }
