--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -2,14 +2,14 @@
 @white: #ffffff;
 @black: #000000;
 @dark-grey: #333333;
+@light-grey: #eeeeee;
 @blue: #81B3D2;
 // viewports
 @tablet-width: 768px;
 @desktop-width: 1200px;
 @mobile-width-only: 767px;
-
 // z-index
-// @zindex-header: 150;
+@zindex-logo: 100;
 // @zindex-footer: 150;
 // @page-heading-decoration: 100;
 // @zindex-modal: 200;
