--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -2,19 +2,154 @@
   outline: 1px solid crimson;
 }
 
+.advantages__text {
+  .offset();
+  padding: 15px 20px 11px;
+  font-size: 14px;
+  line-height: 26px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 41px;
+  }
+}
+
+.advantages__list {
+  .offset();
+  list-style: none;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.advantages__item {
+  background-color: @light-grey;
+
+  @media (min-width: @tablet-width) {
+    width: 100%/3;
+  }
+}
+
+.advantages__item-wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    width: 100%;
+  }
+}
+
+.advantages__text-wrapper {
+  @media (min-width: @tablet-width) {
+    flex-shrink: 0;
+    width: 256px;
+    min-height: 256px;
+    outline: 1px solid red;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 400px;
+  }
+}
+
+.advantages__image-wrapper {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    background-color: green;
+    outline: 1px solid orange;
+    overflow: hidden;
+  }
+}
+
+.advantages__photo {
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    height: 256px;
+    object-fit: cover;
+  }
+}
+
 .advantages__title {
+  .offset();
+  padding: 25px 20px 12px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
 
   @media (min-width: @tablet-width) {
+    padding: 40px 20px 15px;
     font-size: 21px;
   }
 }
 
 .advantages__number,
 .advantages__description {
+  .offset();
   font-size: 14px;
   line-height: 21px;
   color: @dark-grey;
+}
+
+.advantages__description {
+  padding: 17px 35px 26px;
+
+  @media (min-width: @tablet-width) {
+    padding: 23px 35px 65px;
+  }
+}
+
+.advantages__item--detailed:first-child {
+  .advantages__title {
+    padding-top: 70px;
+    background: url("../../img/triangle-advantages.svg") top center no-repeat;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 40px;
+      background: none;
+    }
+  }
+}
+
+.advantages__item--detailed {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: @blue;
+
+  .advantages__title,
+  .advantages__number,
+  .advantages__description {
+    color: @white;
+  }
+
+  .advantages__title {
+    padding-top: 38px;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 40px;
+    }
+  }
+
+  .advantages__description {
+    padding: 17px 10px 37px;
+
+    @media (min-width: @tablet-width) {
+      padding: 26px 20px 37px;
+    }
+  }
+}
+
+.advantages__item--detailed:nth-child(2) {
+  .advantages__text-wrapper {
+    @media (min-width: @tablet-width) {
+      order: 2;
+    }
+  }
 }
