--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -1,19 +1,33 @@
 .hotel-search {
-  outline: 1px solid crimson;
+  padding: 31px 20px 53px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 53px 20px 60px;
+  }
 }
 
 .hotel-search__question {
+  .offset();
+  padding: 0 10px 10px;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
 
   @media (min-width: @tablet-width) {
+    padding: 0 10px 23px;
     font-size: 30px;
   }
 }
 
 .hotel-search__text {
+  .offset();
+  padding: 14px 8px 27px;
   font-size: 14px;
   line-height: 24px;
   color: @dark-grey;
+
+  @media (min-width: @tablet-width) {
+    padding: 14px 8px 38px;
+  }
 }
