--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,23 +1,70 @@
 .main-nav {
   outline: 1px solid crimson;
-  position: relative;
+  order: -1;
 }
 
 .main-nav__list {
   .offset();
   list-style: none;
+  position: relative;
   text-align: center;
+  background-color: @blue;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: @white;
+  }
+}
+
+.main-nav__item {
+  @media (min-width: @tablet-width) {
+    width: 153px;
+    outline: 1px solid green;
+
+    &:nth-child(2) {
+      margin-right: 156px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 239px;
+
+    &:nth-child(2) {
+      margin-right: 244px;
+    }
+  }
+}
+
+.main-nav__list::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+  height: 7px;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav__link:first-child {
+  box-shadow: 0 1px 0 fade(@black, 20%);
 }
 
 .main-nav__link {
   display: block;
-  padding: 10px;
+  padding: 14px;
+  margin-bottom: 1px;
   font-weight: 700;
   font-size: 18px;
   line-height: 40px;
   text-decoration: none;
   color: @white;
-  background-color: @blue;
+  box-shadow: 0 1px 0 fade(@black, 20%), inset 0 1px 0 fade(@white, 20%);
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
@@ -30,8 +77,26 @@
   width: 23px;
   height: 23px;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 17px;
+  right: 20px;
   border: none;
-  background-color: @white;
+  background-color: red;
+}
+
+.main-nav--closed {
+  .main-nav__list {
+    display: none;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
+    }
+  }
+
+  .main-nav__toggle {
+    background-color: green;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
 }
