--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -13,11 +13,22 @@
 }
 
 .page-main__slogan {
+  .offset();
+  padding: 33px 25px 18px;
   font-size: 18px;
   line-height: 26px;
+  font-weight: 700;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
+    padding: 43px 75px 19px;
     font-size: 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 54px;
+    margin: 0 auto;
+    max-width: 610px;
   }
 }
 
@@ -25,4 +36,9 @@
   font-size: 14px;
   line-height: 24px;
   color: @dark-grey;
+}
+
+.page-main__map {
+  min-height: 350px;
+  background-color: lightcoral;
 }
