--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,7 +5,9 @@
 @import "blocks/advantages.less";
 @import "blocks/button.less";
 @import "blocks/footer.less";
+@import "blocks/social.less";
 @import "blocks/page-header.less";
+@import "blocks/intro.less";
 @import "blocks/hotel-search.less";
 @import "blocks/page-main.less";
 @import "blocks/main-nav.less";
