Сетка для страницы с формой

--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -11,9 +11,28 @@
   }
 }
 
+.intro--short {
+  padding: 52px 20px 60px;
+
+  @media (min-width: @tablet-width) {
+    padding: 96px 20px 110px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 103px 20px 113px;
+  }
+}
+
 .intro__slogan {
   @media (min-width: @tablet-width) {
     width: 461px;
     height: 350px;
+  }
+}
+
+.intro__slogan--short {
+  @media (min-width: @tablet-width) {
+    width: 457px;
+    height: 78px;
   }
 }
