--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,37 +1,109 @@
 .review {
-  outline: 1px solid crimson;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 120px;
+  }
 }
 
 .review__title {
+  .offset();
+  padding: 35px 0 30px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
+    padding: 63px 0 33px;
     font-size: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 113px;
   }
 }
 
 .review__description {
+  .offset();
+  margin-bottom: 15px;
   font-size: 14px;
   line-height: 24px;
   color: @dark-grey;
+  text-align: center;
+}
+
+.review__fieldset-wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.review__fieldset {
+  .offset();
+  border: none;
+
+  @media (min-width: @tablet-width) {
+    flex-grow: 1;
+  }
+}
+
+.review__fieldset--impression {
+  @media (min-width: @tablet-width) {
+    order: -1;
+    outline: 1px solid orange;
+    width: 50%;
+    flex-grow: 0;
+  }
 }
 
 .review__legend {
+  padding: 22px 0 21px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
     font-size: 21px;
   }
 }
 
+.review__input-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 21px;
+}
+
 .review__label {
+  display: block;
+  margin-right: 14px;
   font-size: 14px;
   line-height: 26px;
   color: @dark-grey;
+}
+
+.review__input {
+  padding: 24px 0 17px 24px;
+  border: none;
+  background-color: @form-light-grey;
+  flex-grow: 1;
+}
+
+.review__label--info {
+  margin-left: 22px;
+  margin-bottom: 8px;
+}
+
+.review__input--info {
+  margin-bottom: 14px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .review__input::placeholder,
@@ -45,8 +117,43 @@
 }
 
 .review__label-choice {
+  padding: 40px 0 10px 80px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   text-transform: none;
+}
+
+.review__label-choice--checkbox {
+  @media (min-width: @tablet-width) {
+    outline: 1px solid green;
+    width: 50%;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+  }
+}
+
+.review__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.review__wrapper--checkbox {
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
+}
+
+.review__details {
+  padding: 24px 0 17px 24px;
+  width: 100%;
+  height: 160px;
+  box-sizing: border-box;
+  resize: none;
+  border: none;
+  background-color: @form-light-grey;
 }
