--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,6 +3,8 @@
 @black: #000000;
 @dark-grey: #333333;
 @light-grey: #eeeeee;
+@form-light-grey: #f2f2f2;
+@form-dark-grey: #e6e6e6;
 @blue: #81B3D2;
 // viewports
 @tablet-width: 768px;
