Сетка для страницы каталога

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -5,6 +5,7 @@
 @light-grey: #eeeeee;
 @form-light-grey: #f2f2f2;
 @form-dark-grey: #e6e6e6;
+@catalog-grey: #eaeaea;
 @blue: #81B3D2;
 // viewports
 @tablet-width: 768px;
