--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -3,11 +3,15 @@
 }
 
 .page-main__heading {
+  .offset();
+  padding: 31px 20px 19px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-align: center;
 
   @media (min-width: @tablet-width) {
+    padding: 63px 20px 24px;
     font-size: 30px;
   }
 }
@@ -33,9 +37,12 @@
 }
 
 .page-main__description {
+  .offset();
+  padding: 10px 20px 10px;
   font-size: 14px;
   line-height: 24px;
   color: @dark-grey;
+  text-align: center;
 }
 
 .page-main__map {
