--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,21 +1,112 @@
 .photos {
   outline: 1px solid crimson;
+  padding: 44px 20px 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 68px 60px 0;
+  }
+}
+
+.photos__list {
+  .offset();
+  list-style: none;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.photos__item {
+  @media (min-width: @tablet-width) {
+    width: 50%;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
+}
+
+.photos__item--top {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+  }
 }
 
 .photos__title {
+  .offset();
   font-size: 14px;
   line-height: 24px;
   font-weight: 700;
+
+  @media (min-width: @desktop-width) {
+    color: @white;
+  }
+}
+
+.photos__image-wrapper {
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 410px;
+  height: 280px;
+  background-color: yellow;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+    max-width: 100%;
+  }
+}
+
+.photos__image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.photos__wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: @form-light-grey;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    background-color: fade(@black, 30%);
+  }
 }
 
 .photos__author {
+  .offset();
   font-size: 14px;
   line-height: 24px;
   color: @dark-grey;
+  text-transform: none;
+
+  @media (min-width: @desktop-width) {
+    color: @white;
+  }
+}
+
+.photos__likes-button {
+  padding-left: 37px;
+  font-family: inherit;
+  background: none;
+  border: none;
 }
 
 .photos__likes-number {
   font-size: 14px;
   line-height: 24px;
   font-weight: 700;
+
+  @media (min-width: @desktop-width) {
+    color: @white;
+  }
 }
