Добавила скрипт открытия-закрытия меню на моб.версии

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -59,7 +59,7 @@
 
 .advantages__image-wrapper {
   @media (min-width: @tablet-width) {
-    width: 100%;
+    flex-grow: 1;
     background-color: green;
     outline: 1px solid orange;
     overflow: hidden;
