--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -7,6 +7,7 @@
 @form-dark-grey: #e6e6e6;
 @catalog-grey: #eaeaea;
 @blue: #81B3D2;
+@bg-intro: #393534;
 // viewports
 @tablet-width: 768px;
 @desktop-width: 1200px;
