--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,7 +1,3 @@
-.page-main {
-  outline: 1px solid crimson;
-}
-
 .page-main__heading {
   .offset();
   padding: 31px 20px 19px;
@@ -46,6 +42,12 @@
 }
 
 .page-main__map {
-  min-height: 350px;
-  background-color: lightcoral;
+  height: 350px;
+  background-color: @light-grey;
+}
+
+.page-main__map-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
