--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -59,7 +59,7 @@
 
 .main-nav__link {
   display: block;
-  padding: 14px;
+  padding: 8px 20px 7px;
   margin-bottom: 1px;
   font-weight: 700;
   font-size: 18px;
@@ -69,6 +69,7 @@
   box-shadow: 0 1px 0 fade(@black, 20%), inset 0 1px 0 fade(@white, 20%);
 
   @media (min-width: @tablet-width) {
+    padding: 15px 20px;
     font-size: 14px;
     line-height: 26px;
     color: @black;
@@ -80,7 +81,7 @@
   width: 40px;
   height: 40px;
   position: absolute;
-  top: 9px;
+  top: 11px;
   right: 12px;
   border: none;
   background: none;
