--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,4 +1,23 @@
 .social {
   .offset();
   list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-right: 6px;
+  margin-bottom: 31px;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 15px;
+    margin-bottom: 0;
+  }
+}
+
+.social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 46px;
+  height: 46px;
+  margin-left: 6px;
+  background-color: @blue;
 }
