--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 @import "blocks/advantages.less";
 @import "blocks/button.less";
 @import "blocks/footer.less";
+@import "blocks/copyright.less";
 @import "blocks/social.less";
 @import "blocks/page-header.less";
 @import "blocks/intro.less";
