--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "node_modules/normalize.less/normalize.less";
 @import "global/global.less";
 @import "global/fonts.less";
 @import "global/variables.less";
