--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,6 +1,7 @@
 .footer {
   padding: 37px 20px 13px;
   text-align: center;
+  background-color: @white;
 
   @media (min-width: @tablet-width) {
     display: flex;
