--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -16,6 +16,6 @@
   display: grid;
   grid-template-rows: 1fr min-content;
   align-content: start;
-  background-color: @white;
+  background-color: @bg-light-grey;
   color: @black;
 }
