--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -90,7 +90,7 @@
 .review__input {
   padding: 24px 0 17px 24px;
   border: none;
-  background-color: @form-light-grey;
+  background-color: @bg-light-grey;
   flex-grow: 1;
 }
 
@@ -153,5 +153,5 @@
   box-sizing: border-box;
   resize: none;
   border: none;
-  background-color: @form-light-grey;
+  background-color: @bg-light-grey;
 }
