--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -19,11 +19,6 @@ img {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  @media (min-width: @desktop-width) {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
+  background-color: @white;
+  box-shadow: 0 5px 15px fade(@black, 20%);
 }
