--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,8 +3,9 @@
 @black: #000000;
 @dark-grey: #333333;
 @light-grey: #eeeeee;
-@form-light-grey: #f2f2f2;
-@form-dark-grey: #e6e6e6;
+@bg-light-grey: #f2f2f2;
+@bg-dark-grey: #e6e6e6;
+@decoration-grey: #d6d6d6;
 @catalog-grey: #eaeaea;
 @blue: #81B3D2;
 @bg-intro: #393534;
