--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -69,7 +69,7 @@
     justify-content: space-between;
     padding: 20px;
     box-sizing: border-box;
-    background-color: @form-light-grey;
+    background-color: @bg-light-grey;
   }
 
   @media (min-width: @desktop-width) {
