Допилила страницу с формой

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -12,4 +12,8 @@
   background-color: @blue;
   border: none;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    padding: 17px 0;
+  }
 }
