--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -9,6 +9,7 @@
 @catalog-grey: #eaeaea;
 @blue: #81B3D2;
 @bg-intro: #393534;
+@video-icons: #5c6870;
 // viewports
 @tablet-width: 768px;
 @desktop-width: 1200px;
