--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,4 @@
 @import "blocks/review.less";
 @import "blocks/services.less";
 @import "blocks/video-presentation.less";
+@import "blocks/controls.less";
