--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,34 +1,54 @@
 .photos {
-  padding: 44px 20px 0;
+  margin-bottom: 33px;
 
   @media (min-width: @tablet-width) {
-    padding: 68px 60px 0;
+    padding: 66px 60px 0;
+    margin-bottom: 56px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 70px 0 0;
+    margin-bottom: 60px;
   }
 }
 
 .photos__list {
   .offset();
   list-style: none;
+  border-top: 1px solid @bg-dark-grey;
 
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
+    border: none;
   }
 }
 
 .photos__item {
+  padding: 22px 20px 12px;
+  border-bottom: 1px solid @bg-dark-grey;
+
   @media (min-width: @tablet-width) {
+    padding: 0;
     width: 50%;
+    border: none;
   }
 
   @media (min-width: @desktop-width) {
     position: relative;
+    width: auto;
   }
 }
 
 .photos__item--top {
   @media (min-width: @tablet-width) {
     width: 100%;
+  }
+
+  .photos__image-wrapper {
+    @media (min-width: @tablet-width) {
+      height: 400px;
+    }
   }
 }
 
@@ -45,7 +65,7 @@
 
 .photos__image-wrapper {
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-bottom: 13px;
   width: 100%;
   max-width: 410px;
   height: 280px;
@@ -53,6 +73,7 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
     max-width: 100%;
+    height: 267px;
   }
 }
 
@@ -64,10 +85,14 @@
 }
 
 .photos__wrapper {
+  max-width: 410px;
+  margin: 0 auto;
+
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    max-width: 100%;
+    padding: 15px 10px 8px 20px;
     box-sizing: border-box;
     background-color: @bg-light-grey;
   }
@@ -78,6 +103,20 @@
     bottom: 0;
     background-color: fade(@black, 30%);
   }
+}
+
+.photos__item:nth-child(2n + 3) .photos__wrapper {
+  @media (min-width: @tablet-width) {
+    background-color: @bg-dark-grey;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: fade(@black, 30%);
+  }
+}
+
+.photos__text-wrapper {
+  margin-bottom: 9px;
 }
 
 .photos__author {
@@ -93,15 +132,34 @@
 }
 
 .photos__likes-button {
-  padding-left: 37px;
+  .offset();
   font-family: inherit;
   background: none;
   border: none;
+
+  @media (min-width: @tablet-width) {
+    min-width: 75px;
+    margin-bottom: 5px;
+    text-align: left;
+  }
+}
+
+.photos__likes-icon {
+  margin-right: 10px;
+  fill: fade(@black, 30%);
+
+  @media (min-width: @tablet-width) {
+    margin-right: 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    fill: @white;
+  }
 }
 
 .photos__likes-number {
   font-size: 14px;
-  line-height: 24px;
+  line-height: 28px;
   font-weight: 700;
 
   @media (min-width: @desktop-width) {
